• Fixed minor home page layout bug

--- a/client/templates/index/index.styl
+++ b/client/templates/index/index.styl
@@ -119,7 +119,6 @@
       width 320px
       h3
         margin 40px auto 0
-        max-width 240px
       ul
         margin 130px auto 0
         li
@@ -129,8 +128,6 @@
       background-size 140px
       background-position 70px 110px
       left 0
-      h3
-        max-width 200px
       ul
         margin-top 130px
       
